hermes_fuzz_executed_few_shot_v3/fuzz_27_execution
'use strict';

var _a = {b: 2, a: 4}, c = _a.b;
'use strict';
function f() {
  return 'foo';
}
'use strict';
 

'use strict';
function a() {
  return 'a';
}

const a_wasm = WASM.instantiateStreaming(BYTES_TO_BUFFER_AB(await WASM.instantiate(BYTES_TO_BUFFER(await a()))), {})["a"];
"use strict";
exports.__esModule = true;





  })

}));
 

Execution Output ------------------:
test.js:16:67: error: ')' expected at end of function call
const a_wasm = WASM.instantiateStreaming(BYTES_TO_BUFFER_AB(await WASM.instantiate(BYTES_TO_BUFFER(await a()))), {})["a"];
                                                           ~~~~~~~^
